Fixing go-swagger docs Changes : -authHandler.go -userHandler.go -docs.go -auth.dto.go -common.dto.go -erors.dto.go -claims.go
Added :
-user.dto.go
