# api/handlers/userHandler.go
@@ -14,18 +14,17 @@ type UserHandler struct {
 	userRepository repository.UserRepository
 }
 
-// Activate user account handler
+//	swagger:route PATCH /user/status user accountActivation
+//	Activate user account handler
 func (uh UserHandler) ActivateAccount(c echo.Context) error {
 	accountActivationReq := new(dto.AccountActivationRequest)
 	if err := c.Bind(&accountActivationReq); err != nil {
-		return echo.NewHTTPError(http.StatusBadRequest, dto.DefaultResponse{Message: "failed to parse request body"})
+		return echo.NewHTTPError(http.StatusBadRequest, dto.NewDefaultResponse("failed to parse request body"))
 	}
 	// dto validation
 	if err := c.Validate(accountActivationReq); err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest,
-			&dto.ValidationErrorResponse{
-				Message: "Bad Request",
-				Errors:  lib.MapError(err)})
+			dto.NewValidationError("Bad Request", lib.MapError(err)))
 	}
 	fmt.Println(accountActivationReq)
 	return nil
