# dto/errors.dto.go
@@ -5,10 +5,18 @@ import "github.com/ilhamtubagus/urlShortener/lib"
 // A ValidationError is an error that is used when the required input fails validation.
 // swagger:response validationError
 type ValidationErrorResponse struct {
+	// in:body
+	// required: true
+	Body ValidationErrorResponseBody
+}
+
+type ValidationErrorResponseBody struct {
 	// The message
-	// in:body
 	Message string `json:"message"`
-	// The list of error
-	// in:body
+	// Field errors with its messages
 	Errors *[]lib.ValidationError `json:"errors"`
+}
+
+func NewValidationError(msg string, err *[]lib.ValidationError) *ValidationErrorResponseBody {
+	return &ValidationErrorResponseBody{msg, err}
 }
